@@ -89,36 +89,34 @@ ChannelDict = {
 "BOOT2":"0000000100000001",
 "System Menu [JAP]":"0000000100000002",
 "System Menu [PAL]":"0000000100000002",
-"System Menu [USA]":"0000000100000002",
 "System Menu [KOR]":"0000000100000002",
+"System Menu [USA]":"0000000100000002",
 "BC":"0000000100000100",
 "MIOS":"0000000100000101",
-#TODO: Add remaining Channels + UI
-#QT_TR_NOOP("Wii Speak Channel"):"00010001484346xx",
-#QT_TR_NOOP("Photo Channel 1.1 [USA]"):"0001000148415a45",
-#QT_TR_NOOP("Photo Channel 1.1 [PAL]"):"0001000148415a50",
-#QT_TR_NOOP("Photo Channel 1.1 [JAP]"):"0001000148415a4a",
-#QT_TR_NOOP("Metroid Prime 3 Preview"):"00010001484157xx",
-#QT_TR_NOOP("Nintendo Channel"):"00010001484154xx",
-#QT_TR_NOOP("Mii Contest Channel [USA]"):"0001000148415045",
-#QT_TR_NOOP("Mii Contest Channel [PAL]"):"0001000148415050",
-#QT_TR_NOOP("Mii Contest Channel [JAP]"):"000100014841504A",
-#QT_TR_NOOP("Everyone Votes Channel [USA]"):"0001000148414a45",
-#QT_TR_NOOP("Everyone Votes Channel [PAL]"):"0001000148414a50",
-#QT_TR_NOOP("Everyone Votes Channel [JAP]"):"0001000148414a4A",
-#QT_TR_NOOP("Opera / Internet Channel"):"00010001484144xx",
-#QT_TR_NOOP("Photo Channel"):"0001000248414141",
-#QT_TR_NOOP("Shopping Channel"):"0001000248414241",
-#QT_TR_NOOP("Mii Channel"):"001000248414341",
-#QT_TR_NOOP("Photo Channel 1.1"):"001000248415941",
-#QT_TR_NOOP("Wii Message Board"):"001000148414541",
-#QT_TR_NOOP("Weather Channel-HAFx"):"00010002484146xx",
-#QT_TR_NOOP("Weather Channel-HAFA"):"0001000248414641",
-#QT_TR_NOOP("News Channel-HAGx"):"00010002484147xx",
-#QT_TR_NOOP("News Channel-HAGA"):"0001000248414741"
+"BBC iPlayer [PAL]":"0001000148434A50",
+"Check Mii Out":"00010001484150**",
+"Digicam Print [JAP]":"000100014843444A",
+"EULA":"0001000848414B**",
+"Everyone Votes":"0001000148414A**",
+"Jam With The Band":"00010001484341**",
+"Japan Food Service [JAP]":"000100084843434A",
+"Mii Channel [ALL]":"0001000248414341",
+"News":"0001000248414741",
+"Nintendo":"00010001484154**",
+"Opera":"00010001484144**",
+"Photo [ALL]":"0001000248414141",
+"Photo 1.1":"00010002484159**",
+"Region Select":"0001000848414C**",
+"Shashin Channel [JAP]":"000100014843424A",
+"Shop":"00010002484142**",
+"Today & Tomorrow":"00010001484156**",
+"TV Friend / G-Guide [JAP]":"0001000148424E4A",
+"Weather":"00010002484146**",
+"Wii No Ma [JAP]":"000100014843494A",
+"Wii Speak":"00010001484346**"
 }
 
-IOSdict = {
+ChannelRegionDict = {
 "BOOT2":"4",
 "System Menu [JAP]":"128 2.0, 192 2.1, 224 3.0, 256 3.1, 288 3.2,\
 \n352 3.3, 384 3.4, 416 4.0, 448 4.1, 480 4.2,\n512 4.3",
@@ -129,6 +127,30 @@ IOSdict = {
 "System Menu [KOR]":"390 3.5, 454 4.1, 486 4.2, 518 4.3",
 "BC":"2, 4, 5, 6",
 "MIOS":"4, 5, 8, 9, 10",
+"BBC iPlayer [PAL]":"latest (PAL only)",
+"Check Mii Out":"1, 3, 512,\n** = 45 (USA), 4A (JAP), 50 (PAL)",
+"Digicam Print [JAP]":"latest (JAP only)",
+"EULA":"1, 2, 3,\n** = 45 (USA), 4A (JAP), 4B (KOR), 50 (PAL)",
+"Everyone Votes":"latest\n** = 45 (USA), 4A (JAP), 50 (PAL)",
+"Japan Food Service [JAP]":"latest (JAP only)",
+"Jam With The Band":"latest\n** = 4A (JAP), 50 (PAL)",
+"Mii Channel [ALL]":"2, 3, 4, 5, 6",
+"News":"3, 6, 7,\n** = 41 (ALL), 45 (USA), 4A (JAP), 50 (PAL)",
+"Nintendo":"latest\n** = 45 (USA), 4A (JAP), 50 (PAL)",
+"Opera":"1, 3, 257, 512, 1024\n** = 45 (USA), 4A (JAP), 50 (PAL)",
+"Photo [ALL]":"1, 2",
+"Photo 1.1":"1, 2, 3,\n** = 41 (ALL), 4B (KOR)",
+"Region Select":"1, 2,\n** = 45 (USA), 4A (JAP), 4B (KOR), 50 (PAL)",
+"Shashin Channel [JAP]":"latest (JAP only)",
+"Shop":"3, 4, 5, 6, 7, 8, 10, 13, 14 (KOR only), 16,\n17, 18, 19, 20, ** = 41 (ALL), 4B (KOR)",
+"Today & Tomorrow":"latest, ** = 4A (JAP), 50 (PAL)",
+"TV Friend / G-Guide [JAP]":"latest (JAP only)",
+"Weather":"3, 6, 7\n** = 41 (ALL), 45 (USA), 4A (JAP), 50 (PAL)",
+"Wii No Ma [JAP]":"latest (JAP only)",
+"Wii Speak":"1, 256, 512,\n** = 45 (USA), 4A (JAP), 50 (PAL)"
+}
+
+IOSdict = {
 "IOS4":"65280 (stub)",
 "IOS9":"520, 521, 778, 1034",
 "IOS10":"768 (stub)",
